added background color and buttonc ontainer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     
+        <div class="button-container">
+            <button class="bcontainer1">Button 1</button>
+            <button class="bcontainer2">Button 2</button>
+        </div>
+
 
 
 
